fix homepage jump on load by adding margin amount as padding instead.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -164,8 +164,8 @@ blockquote cite {
 
 
 #main-content {
-    margin-top: 60px;
-    padding: 60px 0 0;
+    /* margin-top: 60px; */
+    padding: 120px 0 0;     /* add amount from disabled margin-top.*/
     min-height: calc(100vh - 210px);
 }
 
@@ -244,8 +244,8 @@ blockquote cite {
     }
 
     #main-content {
-        margin-top: 70px;
-        padding: 80px 0 0;
+        /* margin-top: 70px; */
+        padding: 150px 0 0;     /* add amount from disabled margin-top.*/
     }
 
     #main-content h1 {
